--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "m-card",
+  "name": "part2_mcard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,22 +8,33 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.197",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "firebase": "^10.7.1",
+    "firebase": "^10.3.0",
+    "framer-motion": "^10.16.2",
+    "lodash": "^4.17.21",
+    "lodash.flatten": "^4.4.0",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "swiper": "9",
     "typescript": "^4.4.2",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "cracoe ject",
+    "eject": "craco eject",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\""
   },
@@ -39,20 +50,23 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@4.0.2",
+  "packageManager": "yarn@3.6.2",
   "devDependencies": {
-    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-react": "^7.22.5",
     "@craco/craco": "^7.1.0",
     "@emotion/babel-plugin": "^11.11.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@types/eslint": "^8",
+    "@testing-library/jest-dom": "^6.0.1",
+    "@types/lodash.flatten": "^4.4.7",
+    "@types/qs": "^6.9.8",
     "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/validator": "^13.11.1",
     "craco-alias": "^3.0.1",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.1.0"
+    "prettier": "^3.0.2",
+    "webpack-bundle-analyzer": "^4.9.1"
   }
 }
